--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-select": "^3.1.0",
+    "react-time-picker": "^4.0.1",
     "styled-components": "^5.1.1",
     "uuid": "^8.3.0"
   },
