--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-browser-router": "^2.1.2",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^16.13.1",
     "react-dropdown": "^1.8.0",
     "react-router-dom": "^5.2.0",
